# cxlbench

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  copy_directory.cmake  cpjoinres.sh  pyproject.toml
.github/workflows/: clang-format.yml  cmake.yml
column_scans/autovec-db/: .gitignore  CMakeLists.txt
data/: cheapest_config_per_capacity_demand.csv  data_price_capacity.csv  plot_price_capacity.py
data/cpu/: 4th5thGen-all.csv  4th5thGen-platinum-2dpc.csv  4th5thGen_Intel_UPE_ComparisonChart_2025_03_18.csv  process_cpus.py
scripts/: 25_plot_bw_mem.py  25_plot_lat_cxl_dax.py  25_plot_lat_mmap.py  README.md  build.sh  build_run.sh  build_run_log.sh  compare.py  comparison_plotter.py  copy_to_exp.sh  create_exp_dirs.sh  cxlbenchplot.py  demo_zipf.py  exp_labels.txt  format.sh  get_amd_xgmi_links.sh  get_intel_upi_link.sh  get_pcm.sh  get_system_setup.sh  get_uprof.sh  install.sh  json_util.py  lint.sh  memaplot.py  paper_plot_expansion.py  paper_plot_fptree.py  paper_plot_latency_gh200.py  paper_plot_results.py  plot.sh  plot_bw_combined_scaling.py  plot_bw_expansion.py  plot_bw_individual_scaling.py  plot_compare_scalability.py  plot_device_cost.py  plot_falsesharing.py  plot_fptree.py  plot_generator.py  plot_latencies_boxplot.py  plot_latency.py  plot_latency_percentiles.py  (+20 more)
scripts/enums/: benchmark_groups.py  benchmark_keys.py  file_names.py
scripts/experiments/: README.md  debug_move_pages.sh  run_emr.sh  run_genoa.sh  run_saprap.sh  run_saprap_07-02.sh
scripts/heatmaps/: bandwidth_heatmap.py  heatmap.py  latency_heatmap.py
src/: CMakeLists.txt  access_batch.hpp  benchmark.cpp  benchmark.hpp  benchmark_config.cpp  benchmark_config.hpp  benchmark_factory.cpp  benchmark_factory.hpp  benchmark_suite.cpp  benchmark_suite.hpp  cxlbench.cpp  fast_random.cpp  fast_random.hpp  io_operation.hpp  mema.cpp  memory.hpp  numa.cpp  numa.hpp  parallel_benchmark.cpp  parallel_benchmark.hpp  perma.cpp  read_write_ops.hpp  read_write_ops_avx2.hpp  read_write_ops_avx512.hpp  read_write_ops_types.hpp  single_benchmark.cpp  single_benchmark.hpp  threads.cpp  threads.hpp  types.hpp  utils.cpp  utils.hpp
src/microexperiments/: bench_cacheline.cpp  check_move_pages.cpp  larger_than_node_allocation.cpp
src/microexperiments/falsesharing/: main.cpp
src/microexperiments/falsesharing_drepper/: main.cpp
src/microexperiments/shared_memory/: main.cpp
src/playground/: main.cpp
test/: CMakeLists.txt  benchmark_test.cpp  config_test.cpp  custom_operations_test.cpp  cxlbench_test.cpp  mema_test.cpp  numa_read_write_test.cpp  numa_test.cpp  perma_test.cpp  read_write_test.cpp  test_utils.cpp  test_utils.hpp  utils_test.cpp
thesis_plots/: plot_fptree_thesis.py  plot_latency_gh200.py  plot_latency_power9_new.py  plot_mixed_bar_plot.py
thesis_results/recent_results/: pdf-to-png.sh
viz/: README.md  compare.py  comparison_plotter.py  json_util.py  plot_generator.py  plot_results.py  requirements.txt  setup_viz.sh  user_interface.py
workloads/: README.md
workloads/25-emr-bw-cxl-dax/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml  stream_reads.yaml  stream_writes.yaml
workloads/25-emr-lat-cxl-dax/: atomics.yaml  rand-read.yaml  rand_write.yaml  streaming-rand-write-64B.yaml  streaming-reads-64B.yaml
workloads/25-emr-lat-ddr-numa/: atomics.yaml  rand-read.yaml  rand_write.yaml  streaming-rand-write-64B.yaml  streaming-reads-64B.yaml
workloads/25-emr-lat-mem-map-unamp/: cxl_dax_map_unmap.yaml  local_map_unmap.yaml
workloads/25-emr-read-load-cxl-dax-offset-0/: seq-read.yaml
workloads/25-emr-read-load-cxl-dax-offset-512GB/: seq-read.yaml
workloads/25-gnr-bw-cxl-dax/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml  stream_reads.yaml  stream_writes.yaml
workloads/25-gnr-lat-cxl-dax/: atomics.yaml  rand-read.yaml  rand_write.yaml  streaming-rand-write-64B.yaml  streaming-reads-64B.yaml
workloads/25-gnr-lat-ddr-numa/: atomics.yaml  rand-read.yaml  rand_write.yaml  streaming-rand-write-64B.yaml  streaming-reads-64B.yaml
workloads/25-gnr-lat-mem-map-unmap/: cxl_dax_map_unmap.yaml  local_map_unmap.yaml
workloads/25-gnr-read-load-cxl-dax-offset-0/: seq-read.yaml
workloads/25-gnr-read-load-cxl-dax-offset-0-long/: seq-read.yaml
workloads/25-gnr-read-load-cxl-dax-offset-512GB/: seq-read.yaml
workloads/25-gnr_bw_cxl_mem_dax/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml
workloads/bw_expansion_cxl_genoa/: interleaved_sequential_reads.yaml  parallel_sequential_reads.yaml
workloads/bw_expansion_max_node_0/: scale_reads_rnd.yaml  scale_reads_seq.yaml  scale_writes_rnd.yaml  scale_writes_seq.yaml
workloads/bw_expansion_max_node_1/: scale_reads_rnd.yaml  scale_reads_seq.yaml  scale_writes_rnd.yaml  scale_writes_seq.yaml
workloads/bw_expansion_max_node_1_genoa/: scale_reads_rnd.yaml  scale_reads_seq.yaml  scale_writes_rnd.yaml  scale_writes_seq.yaml
workloads/bw_expansion_max_node_2/: scale_reads_rnd.yaml  scale_reads_seq.yaml  scale_writes_rnd.yaml  scale_writes_seq.yaml
workloads/bw_expansion_parallel_emr_SNC1/: seq_reads_local1_local2.yaml  seq_reads_local_device.yaml  seq_reads_local_remote_socket.yaml
workloads/bw_expansion_parallel_emr_SNC1_4k/: seq_reads_local1_local2.yaml  seq_reads_local_device.yaml  seq_reads_local_remote_socket.yaml
workloads/bw_expansion_parallel_genoa/: seq_reads_local1_local2.yaml  seq_reads_local_device.yaml
workloads/bw_expansion_parallel_saprap/: seq_reads_local1_local2.yaml  seq_reads_local_device.yaml
workloads/bw_expansion_parallel_saprap_SNC4/: seq_reads_local1_local2.yaml  seq_reads_local_device.yaml  seq_reads_local_remote_socket.yaml
workloads/bw_gh200_expansion/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml
workloads/bw_gh200_gpumem/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  sequential_writes.yaml
workloads/bw_gh200_local/: random_reads.yaml  random_writes.yaml  sequential_reads.yaml  (+1 more)
(+325 files in other folders)
